margin-right-1 to mr-1p

--- a/templates/accounts/create-profile.html
+++ b/templates/accounts/create-profile.html
@@ -20,7 +20,7 @@
     {% csrf_token %}
     <div class="flex-this column w-100">
       <div class="flex-this w-100 space-between">
-        <div class="w-50 margin-right-1">
+        <div class="w-50 mr-1p">
           <label for="first_name">First name </label>
           {{ user_form.first_name }}
         </div>
@@ -31,7 +31,7 @@
       </div>
 
       <div class="flex-this w-100 space-between mt-1p">
-        <div class="w-50 margin-right-1">
+        <div class="w-50 mr-1p">
           <label for="position">Position </label>
           {{ profile_form.position }}
         </div>
@@ -42,7 +42,7 @@
       </div>
 
       <div class="flex-this w-100 space-between mt-1p">
-        <div class="w-50 margin-right-1">
+        <div class="w-50 mr-1p">
           <label for="city_town">Town or city </label>
           {{ profile_form.city_town }}
         </div>
