--- a/templates/accounts/newsletter-subscription.html
+++ b/templates/accounts/newsletter-subscription.html
@@ -29,25 +29,25 @@
 
                             <div class="flex-this column w-70">
                                 <div class="flex-this w-100">
-                                    <div class="w-100 margin-right-1">
+                                    <div class="w-100 mr-1p">
                                         <label>Name</label>
                                         <input class="w-100 margin-bottom-2" id="first_name" type="text" name="first_name" placeholder="First Name"/>
                                     </div>
                                 </div>
                                 <div class="flex-this w-100">
-                                    <div class="w-100 margin-right-1">
+                                    <div class="w-100 mr-1p">
                                         <input class="w-100 margin-bottom-2" id="last_name" type="text" name="last_name" placeholder="Last Name"/>
                                     </div>
                                 </div>
                                 <div class="flex-this w-100">
-                                    <div class="w-100 margin-right-1">
+                                    <div class="w-100 mr-1p">
                                         <label>Email<span title="Required" class="red-text"> *</span></label>
                                         <input class="w-100 margin-bottom-2" id="email" type="email" name="email" placeholder="Email" required/>
                                     </div>
                                 </div>
                                 <label class="margin-top-2">What topic(s) are you interested in? <br/> <em>(Check all that apply):<span title="Required" class="red-text"> *</span></em></label>
                                 <div class="flex-this w-100 mt-1p margin-bottom-16">
-                                    <div class="w-100 margin-right-1">
+                                    <div class="w-100 mr-1p">
                                         <br>
                                         <input class="newsletter-toggle" type="checkbox" id="tech" name="topic" value="tech">
                                         <label for="tech">Hub & API Updates</label><br><br>
@@ -63,7 +63,7 @@
                                 </div>
                                 <input type="hidden" name="g-recaptcha-response" id="g-recaptcha-response">
                                 <div class="flex-this w-100">
-                                    <div class="w-100 margin-right-1 margin-top-16">
+                                    <div class="w-100 mr-1p margin-top-16">
                                         <button type="submit" class="primary-btn action-btn" name="subscribebtn">Subscribe</button>
                                     </div>
                                 </div> 
