--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -81,7 +81,7 @@
 
     <div class="flex-this row margin-top-16">
       <div class="flex-this align-center space-between">
-        <div class="text-align-right margin-right-1">
+        <div class="text-align-right mr-1p">
           <input type="checkbox" name="terms-agreement" required />
         </div>
         <div class="no-margin w-100">
@@ -135,7 +135,7 @@
         <div class="horizental-line"> </div>
         </div>
         <div class="flex-this">
-            <a class="w-100 white-btn flex-this align-center justify-center" href="{% provider_login_url 'google' %}"><img class="margin-right-1" src="{% static 'images/logos/google.png' %}" alt=""><span class="margin-left-1 primary-black-text">Register With Google</span></a>
+            <a class="w-100 white-btn flex-this align-center justify-center" href="{% provider_login_url 'google' %}"><img class="mr-1p" src="{% static 'images/logos/google.png' %}" alt=""><span class="margin-left-1 primary-black-text">Register With Google</span></a>
         </div>
         {% include 'partials/_alerts.html' %}
     </div>
