--- a/templates/partials/_add-projectperson.html
+++ b/templates/partials/_add-projectperson.html
@@ -12,7 +12,7 @@
         {% if not f.instance.pk %}
             <div class="flex-this">
                 <div id="person-form-0" class="flex-this row margin-right-16 margin-bottom-8">
-                    <div class="margin-right-1">
+                    <div class="mr-1p">
                         <label>{{ f.name.label }}</label>
                         <div class="tooltip"><strong>?</strong>
                             <span class="tooltiptext">
