--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -558,12 +558,12 @@
                 </div>
                 <p class="font-size-14 mt-1p no-bottom-margin">Embed Options</p>
                 <div class="flex-this">
-                    <select id="embedLayoutOptions" name="layout" class="project-sort w-30 mt-1p margin-right-1">
+                    <select id="embedLayoutOptions" name="layout" class="project-sort w-30 mt-1p mr-1p">
                         <option class="darkteal-text pointer" value="1" selected>Icons Only</option>
                         <option class="darkteal-text pointer" value="2">Icon and Title</option>
                         <option class="darkteal-text pointer" value="3">Icon, Title and Text</option>
                     </select>
-                    <select id="embedAlignOptions" name="align" class="project-sort w-30 mt-1p margin-right-1">
+                    <select id="embedAlignOptions" name="align" class="project-sort w-30 mt-1p mr-1p">
                         <option class="darkteal-text pointer" value="left" selected>Left Align</option>
                         <option class="darkteal-text pointer" value="right">Right Align</option>
                     </select>
