--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -198,7 +198,7 @@
                                         <form method="POST" action="">
                                             {% csrf_token %}
                                             <div class="flex-this w-100 text-align-center">
-                                                <button class="primary-btn white-btn margin-right-1" name="remove_contributor">Yes, remove</button>    
+                                                <button class="primary-btn white-btn mr-1p" name="remove_contributor">Yes, remove</button>    
                                                 <button id="closeContributorModalBtn" class="margin-left-1 primary-btn action-btn">Cancel</button>
                                             </div>                                            
                                         </form>
@@ -757,12 +757,12 @@
                                 </div>
                                 <p class="font-size-14 mt-1p no-bottom-margin">Embed Options</p>
                                 <div class="flex-this">
-                                    <select id="embedLayoutOptions" name="layout" class="project-sort w-30 mt-1p margin-right-1">
+                                    <select id="embedLayoutOptions" name="layout" class="project-sort w-30 mt-1p mr-1p">
                                         <option class="darkteal-text pointer" value="1" selected>Icons Only</option>
                                         <option class="darkteal-text pointer" value="2">Icon and Title</option>
                                         <option class="darkteal-text pointer" value="3">Icon, Title and Text</option>
                                     </select>
-                                    <select id="embedLanguageOptions" name="language" class="project-sort w-30 mt-1p margin-right-1">
+                                    <select id="embedLanguageOptions" name="language" class="project-sort w-30 mt-1p mr-1p">
                                         {% if notices %}
                                             <option class="darkteal-text pointer" value="en" selected>English</option>
                                             {% for notice in notices %}
@@ -788,7 +788,7 @@
                                             {% endfor %}
                                         {% endif %}
                                     </select>
-                                    <select id="embedAlignOptions" name="align" class="project-sort w-30 mt-1p margin-right-1">
+                                    <select id="embedAlignOptions" name="align" class="project-sort w-30 mt-1p mr-1p">
                                         <option class="darkteal-text pointer" value="left" selected>Left Align</option>
                                         <option class="darkteal-text pointer" value="right">Right Align</option>
                                     </select>
