--- a/templates/partials/_update-account-main-area.html
+++ b/templates/partials/_update-account-main-area.html
@@ -118,7 +118,7 @@
                 {{ update_form.country }}
             </div>
             <div class="flex-this">
-                <div class="w-50 margin-right-1">
+                <div class="w-50 mr-1p">
                     <label>State, Province, or Region</label> <br>
                     {{ update_form.state_province_region }}
                 </div>
