--- a/templates/snippets/modals/leave-account-modal.html
+++ b/templates/snippets/modals/leave-account-modal.html
@@ -29,7 +29,7 @@
                     {% if institution %} 
                         href="{% url 'remove-institution-member' institution.id request.user.id %}" 
                     {% endif %}
-                    class="primary-btn white-btn margin-right-1"
+                    class="primary-btn white-btn mr-1p"
                 >Yes, leave account</a>    
                 <div 
                     {% if community %}
