--- a/templates/snippets/modals/remove-member-modal.html
+++ b/templates/snippets/modals/remove-member-modal.html
@@ -44,7 +44,7 @@
                             href="{% url 'remove-institution-member' institution.id viewer.id %}" 
                         {% endif %}
                     {% endif %} 
-                    class="primary-btn white-btn margin-right-1"
+                    class="primary-btn white-btn mr-1p"
                 >
                 Yes, remove member</a>    
                 <div 
