--- a/templates/accounts/apikey.html
+++ b/templates/accounts/apikey.html
@@ -1,7 +1,7 @@
 {% extends 'settings-base.html' %}{% load static %}
 
 {% block settings %}
-<div class="flex-this column w-80 border-left margin-right-1">
+<div class="flex-this column w-80 border-left mr-1p">
     <div class="flex-this space-between">
         <div><h3 class="no-top-margin">API Key Manager</h3></div>
     </div>
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <div class="flex-this column w-100 margin-right-1">
+        <div class="flex-this column w-100 mr-1p">
             <div><h4 class="margin-top-16">Delete API Key</h4></div>
     
             <div class="w-70 margin-bottom-2">
