--- a/templates/accounts/change-password.html
+++ b/templates/accounts/change-password.html
@@ -1,7 +1,7 @@
 {% extends 'settings-base.html' %} {% load static %}
 
 {% block settings %}
-<div class="flex-this column w-50   margin-right-1">
+<div class="flex-this column w-50   mr-1p">
     <div><h3>Change Password</h3></div>
 
     <div>
