--- a/templates/accounts/deactivate.html
+++ b/templates/accounts/deactivate.html
@@ -3,7 +3,7 @@
 {% block settings %}
 <form id="deactivateUserForm" method="POST">
 
-    <div class="flex-this column w-80   margin-right-1">
+    <div class="flex-this column w-80   mr-1p">
         <div><h3>Deactivate Your Profile</h3></div>
 
         <div class="w-70 margin-bottom-2">
@@ -24,7 +24,7 @@
                         This cannot be undone and you will be automatically logged out. <br></p>  
                 </div>
                 <div class="flex-this w-100 text-align-center">
-                    <div id="continueDeactivationBtn" class="primary-btn white-btn margin-right-1">Yes, deactivate my profile</div>    
+                    <div id="continueDeactivationBtn" class="primary-btn white-btn mr-1p">Yes, deactivate my profile</div>    
                     <div id="closeDeactivationModal" class="margin-left-1 primary-btn action-btn">Cancel</div>
                 </div>
     
