--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -38,7 +38,7 @@
                 <div class="horizental-line"> </div>
                 </div>
                 <div class="flex-this">
-                    <a class="w-100 white-btn flex-this align-center justify-center" href="{% provider_login_url 'google' %}"><img class="margin-right-1" src="{% static 'images/logos/google.png' %}" alt=""><span class="margin-left-1 primary-black-text">Sign in With Google</span></a>
+                    <a class="w-100 white-btn flex-this align-center justify-center" href="{% provider_login_url 'google' %}"><img class="mr-1p" src="{% static 'images/logos/google.png' %}" alt=""><span class="margin-left-1 primary-black-text">Sign in With Google</span></a>
                 </div>
             </div>
             <input type="hidden" name="next" value="{{ request.GET.next }}"/>
