--- a/templates/accounts/newsletter-unsubscription.html
+++ b/templates/accounts/newsletter-unsubscription.html
@@ -17,7 +17,7 @@
                             <div class="flex-this column w-70">
                                 <label>What topic(s) are you interested in? <br> <em>(Check all that apply):<span title="Required" class="red-text"> *</span></em></label><br>
                                 <div class="flex-this w-100 mt-1p">
-                                    <div class="w-100 margin-right-1">
+                                    <div class="w-100 mr-1p">
                                         <input class="newsletter-toggle" type="checkbox" id="tech" name="topic" value="tech" {% if tech == 'yes' %} checked {% endif %}>
                                         <label for="tech">Hub & API Updates</label><br><br>
                                         <input class="newsletter-toggle" type="checkbox" id="news" name="topic" value="news" {% if news == 'yes' %} checked {% endif %}>
@@ -37,7 +37,7 @@
                             <div class="flex-this column w-100">
                                 <p>Unsubscribe from all newsletter topics</p>
                                 <div class="flex-this w-100 mt-1p">
-                                    <div class="w-100 margin-right-1">
+                                    <div class="w-100 mr-1p">
                                         <input class="newsletter-toggle" type="checkbox" id="unsubscribe" name="unsubscribe" value="unsubscribe" onchange="unsubscribeDeselect()">
                                         <label for="unsubscribe"> Yes, I would like to unsubscribe from all newsletter topics.</label>
                                     </div>
