--- a/templates/accounts/select-account.html
+++ b/templates/accounts/select-account.html
@@ -7,7 +7,7 @@
 
         <div class="flex-this row space-between">
 
-            <div class="account-card margin-right-1">
+            <div class="account-card mr-1p">
                 <div class="flex-this">
                     <p><strong>Community Account </strong></p>
                     <div class="tooltip margin-top-16 margin-left-8"><strong>i</strong>
@@ -22,7 +22,7 @@
                 <a href="{% url 'connect-community' %}" class="primary-btn white-btn-select">Join</a>
                 <a href="{% url 'prep-community' %}" class="primary-btn white-btn-select">Create</a>
             </div>
-            <div class="account-card margin-left-1 margin-right-1">
+            <div class="account-card margin-left-1 mr-1p">
                 <div class="flex-this">
                     <div><p><strong>Institution Account</strong></p></div>
                     <div class="tooltip margin-top-16 margin-left-8"><strong>i</strong>
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="flex-this">
-                    <div class="margin-right-1"><img loading="lazy" 
+                    <div class="mr-1p"><img loading="lazy" 
                     class="tiny-notice pointer-event-none" src="{% static 'images/notices/tk-notice.png' %}" alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center."></div>
                     <div class="margin-left-16"><img loading="lazy" class="tiny-notice pointer-event-none" src="{% static 'images/notices/ci-open-to-collaborate.png' %}" alt="Open to Collaborate Notice icon. Black square with the top right corner folded and two white hands reaching toward each other from top to bottom over a white horizontal rectangle. "></div>
                 </div>
@@ -42,7 +42,7 @@
             <div class="account-card margin-left-1">
                 <p><strong>Researcher Account</strong></p>
                 <div class="flex-this">
-                    <div class="margin-right-1"><img loading="lazy" class="tiny-notice pointer-event-none" src="{% static 'images/notices/tk-notice.png' %}" alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center."></div>
+                    <div class="mr-1p"><img loading="lazy" class="tiny-notice pointer-event-none" src="{% static 'images/notices/tk-notice.png' %}" alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center."></div>
                     <div class="margin-left-16"><img loading="lazy" class="tiny-notice pointer-event-none" src="{% static 'images/notices/bc-notice.png' %}" alt="BC Notice icon. Black background with the top right corner folded and the letters “BC” in white in center."></div>
                 </div>
                 <p><strong>Who?</strong> An individual who carries out academic or scientific research independently or in an institution </p>
