--- a/templates/accounts/update-profile.html
+++ b/templates/accounts/update-profile.html
@@ -1,7 +1,7 @@
 {% extends 'settings-base.html' %} {% load static %}
 
 {% block settings %}
-<div class="flex-this column w-50   margin-right-1">
+<div class="flex-this column w-50   mr-1p">
     <div class="flex-this space-between">
         <div><h3 class="no-top-margin">Profile Information</h3></div>
         <div>User Name: {{ request.user.username }}</div>
