--- a/templates/admin/partials/_data-visuals.html
+++ b/templates/admin/partials/_data-visuals.html
@@ -122,9 +122,9 @@
         <h1 class="center-text">Hub Activity</h1>
         <div class="flex-this justify-center">
             <div class="tooltip" style="cursor: default;background-color: #EF6C00;"></div>
-            <p class="margin-left-8 margin-right-1 no-top-margin">New Users</p>
+            <p class="margin-left-8 mr-1p no-top-margin">New Users</p>
             <div class="tooltip" style="cursor: default;background-color: #3876aa;"></div>
-            <p class="margin-left-8 margin-right-1 no-top-margin">New Projects</p>
+            <p class="margin-left-8 mr-1p no-top-margin">New Projects</p>
         </div>
         <div style="height: 400px;">
             <canvas id="newUsers"></canvas>
