--- a/templates/communities/create-community.html
+++ b/templates/communities/create-community.html
@@ -20,7 +20,7 @@
             </div>
 
             <div class="flex-this margin-top-8">
-                <div class="w-50 margin-right-1">
+                <div class="w-50 mr-1p">
                     <label class="pad-top-1-5">Community Entity</label>
                     <div class="tooltip"><strong>i</strong>
                         <span class="tooltiptext">
