--- a/templates/institutions/create-institution.html
+++ b/templates/institutions/create-institution.html
@@ -38,7 +38,7 @@
 
 
         <div class="w-100 flex-this">
-            <div class="w-50 margin-right-1">
+            <div class="w-50 mr-1p">
                 <label class="pad-top-1-5" for="city_town">Town or City</label><br>
                 {{ form.city_town }}
             </div>
