margin-left-1 to ml-1p

--- a/templates/accounts/apikey.html
+++ b/templates/accounts/apikey.html
@@ -69,7 +69,7 @@
                             {% csrf_token %}
                             <button name="continueKeyDeleteBtn" class="primary-btn white-btn">Yes, delete this key</button>    
                         </form>
-                        <div id="closeModal" class="margin-left-1 primary-btn action-btn">Cancel</div>
+                        <div id="closeModal" class="ml-1p primary-btn action-btn">Cancel</div>
                     </div>
         
                 </div>
