--- a/templates/accounts/create-profile.html
+++ b/templates/accounts/create-profile.html
@@ -24,7 +24,7 @@
           <label for="first_name">First name </label>
           {{ user_form.first_name }}
         </div>
-        <div class="w-50 margin-left-1">
+        <div class="w-50 ml-1p">
           <label for="last_name">Last name</label>
           {{ user_form.last_name }}
         </div>
@@ -35,7 +35,7 @@
           <label for="position">Position </label>
           {{ profile_form.position }}
         </div>
-        <div class="w-50 margin-left-1">
+        <div class="w-50 ml-1p">
           <label for="affiliation">Affiliation</label>
           {{ profile_form.affiliation }}
         </div>
@@ -46,7 +46,7 @@
           <label for="city_town">Town or city </label>
           {{ profile_form.city_town }}
         </div>
-        <div class="w-50 margin-left-1">
+        <div class="w-50 ml-1p">
           <label for="state_province_region">State, province, or region</label>
           {{ profile_form.state_province_region }}
         </div>
