--- a/templates/accounts/deactivate.html
+++ b/templates/accounts/deactivate.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="flex-this w-100 text-align-center">
                     <div id="continueDeactivationBtn" class="primary-btn white-btn mr-1p">Yes, deactivate my profile</div>    
-                    <div id="closeDeactivationModal" class="margin-left-1 primary-btn action-btn">Cancel</div>
+                    <div id="closeDeactivationModal" class="ml-1p primary-btn action-btn">Cancel</div>
                 </div>
     
             </div>
