--- a/templates/accounts/select-account.html
+++ b/templates/accounts/select-account.html
@@ -22,7 +22,7 @@
                 <a href="{% url 'connect-community' %}" class="primary-btn white-btn-select">Join</a>
                 <a href="{% url 'prep-community' %}" class="primary-btn white-btn-select">Create</a>
             </div>
-            <div class="account-card margin-left-1 mr-1p">
+            <div class="account-card ml-1p mr-1p">
                 <div class="flex-this">
                     <div><p><strong>Institution Account</strong></p></div>
                     <div class="tooltip margin-top-16 margin-left-8"><strong>i</strong>
@@ -39,7 +39,7 @@
                 <a href="{% url 'connect-institution' %}" class="primary-btn white-btn-select">Join</a>
                 <a href="{% url 'prep-institution' %}" class="primary-btn white-btn-select">Create</a>
             </div>
-            <div class="account-card margin-left-1">
+            <div class="account-card ml-1p">
                 <p><strong>Researcher Account</strong></p>
                 <div class="flex-this">
                     <div class="mr-1p"><img loading="lazy" class="tiny-notice pointer-event-none" src="{% static 'images/notices/tk-notice.png' %}" alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center."></div>
