--- a/templates/communities/customize-label.html
+++ b/templates/communities/customize-label.html
@@ -286,7 +286,7 @@
 
             <div class="text-align-right margin-bottom-16 margin-top-2 flex-this align-center">
                 <button id="saveLabelBtn" name="save_label_btn" class="primary-btn action-btn">Save Label</button> 
-                <small id="language-error" class="red-text margin-left-1 hide">Please clear or select a language from the dropdown list.</small>
+                <small id="language-error" class="red-text ml-1p hide">Please clear or select a language from the dropdown list.</small>
             </div>
         </form>
     </div>
