--- a/templates/communities/edit-label.html
+++ b/templates/communities/edit-label.html
@@ -106,7 +106,7 @@
 
             <div class="text-align-right margin-bottom-8 mt-1p flex-this align-center">
                 <button id="saveLabelBtn" class="primary-btn action-btn ">Save Label</button>
-                <small id="language-error" class="red-text margin-left-1 hide">Please clear or select a language from the dropdown list.</small>
+                <small id="language-error" class="red-text ml-1p hide">Please clear or select a language from the dropdown list.</small>
             </div>
         </form>
     
