--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -199,7 +199,7 @@
                                             {% csrf_token %}
                                             <div class="flex-this w-100 text-align-center">
                                                 <button class="primary-btn white-btn mr-1p" name="remove_contributor">Yes, remove</button>    
-                                                <button id="closeContributorModalBtn" class="margin-left-1 primary-btn action-btn">Cancel</button>
+                                                <button id="closeContributorModalBtn" class="ml-1p primary-btn action-btn">Cancel</button>
                                             </div>                                            
                                         </form>
                                     </div>
@@ -1139,7 +1139,7 @@
                 <h5 class="primary-black-text no-top-margin">This account needs to be confirmed before public view is available to others.</h5>  
             </div>
             <div class="flex-this w-100 text-align-center">   
-                <div class="margin-left-1 primary-btn action-btn" onclick="cancelDisclaimer()">OK</div>
+                <div class="ml-1p primary-btn action-btn" onclick="cancelDisclaimer()">OK</div>
             </div>
         </div>
     </div>
