--- a/templates/snippets/modals/change-member-modal.html
+++ b/templates/snippets/modals/change-member-modal.html
@@ -51,7 +51,7 @@
                     <button id="continueRoleChangeBtn" class="primary-btn white-btn mr-1p" name="change_member_role_btn">Update member role</button>    
                     <div 
                         id="closeRoleChangeModal_{% if admin %}{{ admin.id }}{% endif %}{% if editor %}{{ editor.id }}{% endif %}{% if viewer %}{{ viewer.id }}{% endif %}" 
-                        class="margin-left-1 primary-btn action-btn"
+                        class="ml-1p primary-btn action-btn"
                     >Cancel</div>
                 </div>
             </form>
