--- a/templates/snippets/modals/leave-account-modal.html
+++ b/templates/snippets/modals/leave-account-modal.html
@@ -38,7 +38,7 @@
                     {% if institution %}
                         id="closeLeaveInstModal_{{ institution.id }}" 
                     {% endif %}
-                    class="margin-left-1 primary-btn action-btn"
+                    class="ml-1p primary-btn action-btn"
                 >Cancel</div>
             </div>
 
