--- a/templates/snippets/modals/remove-member-modal.html
+++ b/templates/snippets/modals/remove-member-modal.html
@@ -49,7 +49,7 @@
                 Yes, remove member</a>    
                 <div 
                     id="closeRemoveMemberModal_{% if admin %}{{ admin.id }}{% endif %}{% if editor %}{{ editor.id }}{% endif %}{% if viewer %}{{ viewer.id }}{% endif %}" 
-                    class="margin-left-1 primary-btn action-btn"
+                    class="ml-1p primary-btn action-btn"
                 >Cancel</div>
             </div>
 
