--- a/templates/accounts/link-account.html
+++ b/templates/accounts/link-account.html
@@ -14,7 +14,7 @@
             <div class="flex-this">
                 <button type="button" class="w-50 white-btn flex-this align-center justify-center" onclick="showConfirmationAlert()">
                     <img class="mr-1p" src="{% static 'images/logos/google.png' %}" alt="">
-                    <span class="margin-left-1 primary-black-text">Unlink With Google</span>
+                    <span class="ml-1p primary-black-text">Unlink With Google</span>
                     <i class="fa-solid fa-link-simple-slash margin-left-55"></i>
                 </button>
             </div>
@@ -25,7 +25,7 @@
             <div class="flex-this">
                 <button type="submit" class="w-50 white-btn flex-this align-center justify-center">
                     <img class="mr-1p" src="{% static 'images/logos/google.png' %}" alt="">
-                    <span class="margin-left-1 primary-black-text">Link With Google</span>
+                    <span class="ml-1p primary-black-text">Link With Google</span>
                     <i class="fa-solid fa-link-simple margin-left-55"></i>
                 </button>
             </div>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="flex-this w-100 text-align-center">
                     <div class="primary-btn white-btn mr-1p" onclick="confirmUnlink()">Unlink</div>    
-                    <div class="margin-left-1 primary-btn action-btn" onclick="cancelUnlink()">Cancel</div>
+                    <div class="ml-1p primary-btn action-btn" onclick="cancelUnlink()">Cancel</div>
                 </div>
             </div>
         </div>
