--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -135,7 +135,7 @@
         <div class="horizental-line"> </div>
         </div>
         <div class="flex-this">
-            <a class="w-100 white-btn flex-this align-center justify-center" href="{% provider_login_url 'google' %}"><img class="mr-1p" src="{% static 'images/logos/google.png' %}" alt=""><span class="margin-left-1 primary-black-text">Register With Google</span></a>
+            <a class="w-100 white-btn flex-this align-center justify-center" href="{% provider_login_url 'google' %}"><img class="mr-1p" src="{% static 'images/logos/google.png' %}" alt=""><span class="ml-1p primary-black-text">Register With Google</span></a>
         </div>
         {% include 'partials/_alerts.html' %}
     </div>
